@@ -1,3 +1,14 @@
+Tue Oct 29 18:37:33 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* include/ruby/ruby.h: introduce new flags for T_TYPEDDATA.
+	  * RUBY_TYPED_FREE_IMMEDIATELY: free the data given by DATA_PTR()
+	    with dfree function immediately.  Otherwise (default), the data
+	    freed at finalizaton point.
+	  * RUBY_TYPED_WB_PROTECTED: make this object with FL_WB_PROTECT
+	    (not shady).
+
+	* gc.c (obj_free): support RUBY_TYPED_FREE_IMMEDIATELY.
+
 Tue Oct 29 16:49:03 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (vm_malloc_increase): decrease it more carefully.
